# isax

./: .flake8  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  style-check.yml  unit-testing.yml
_overrides/partials/: source.html
api/block/: index.html
api/metrics/: index.html
api/sample/: index.html
docs/: index.md
docs/_static/: custom_css.css
docs/api/: block.md  metrics.md  sample.md
examples/: 01_ising_model_physics.ipynb  02_fps.ipynb  03_ising_thermodynamics.ipynb  04_paoa_optimization.ipynb  05_ising_mnist.ipynb
examples/01_ising_model_physics/: index.html
examples/02_fps/: index.html
examples/03_ising_thermodynamics/: index.html
examples/04_paoa_optimization/: index.html
examples/05_ising_mnist/: index.html
isax/: __init__.py  block.py  metrics.py  sample.py
search/: search_index.json
tests/: test_metrics.py  test_sample.py
